crates/wac-parser/tests/resolution/fail/duplicate-resource-constructor-param.wac
resource x {
    constructor(a: u32, a: string);
}